# limpid

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  limpid.c
cmake/: AddCXXCompilerFlag.cmake  DetermineTargetArchitecture.cmake  FindLibDl.cmake
examples/: CMakeLists.txt
examples/cli/: Makefile  client.c  sample_app.c
examples/json/: Makefile  app  client  client.c  sample_app.c
include/: limpid.h
include/limpid/: cli.h  common.h  config.h  core.h  json.h  lib-json.h  lib-string.h
py-limpid/: py-limpid.c  setup.py
python/: build.sh  py-limpid.c  setup.py
src/: cli.c  core.c  core.h  json.c  lib-json.c  lib-read-line.c  lib-readline.c  lib-string.c  limpid-cli.c  limpid-core.c  limpid-json.c  limpid.c  private.h  read-line.c  read_line.c  read_line.h  sample_app.c  string.c
